# qhana-integration-tests

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  helpers.py  main.py  plugin_tests.py  pyproject.toml  wrapper.py
.github/: docker-compose.yml
.github/workflows/: docker-compose.yml  images.yml  run_integration_tests.yml
selenium_proxy/: Dockerfile
src/: helpers.py  plugin_tests.py  wrapper.py
